package sample;

public class Constants {

    private Constants() {}
    public static final String INVALID_COMMAND_MESSAGE = "Invalid Command!";
    public static final String HELP_PATH_NAME = "src/sample/transparent_text_editor_help.txt";

    public static final String BACKGROUND_COLOR = "white";
    public static final String TEXT_COLOR = "white";

    public static final double TEXTAREA_OPACITY  = 0.2;
    public static final double TEXTFIELD_OPACITY = 0.2;

    public static final int TEXTAREA_TEXT_SIZE = 20;
    public static final int TEXTBOX_TEXT_SIZE = 15;

}
